Fixes alignment and implements meeting decisions.

--- a/myuw/static/css/boilerplate.less
+++ b/myuw/static/css/boilerplate.less
@@ -115,13 +115,17 @@ body { padding: 0; margin: 0; font-family: "Open Sans",Helvetica,Arial,Verdana,s
 #app_notices {
 
     @media @desktop { margin-left: 0; margin-right: 0; padding: 10px !important; }
-    /**
+
     .notice-header { margin-top: 0; }
+
+    /**
     .notice-content-list-item { background: transparent !important;
         .notice-category-icon {  background: transparent !important; }
         .notice-title { background: transparent !important; }
+        .notice-body-with-title { background: #fcf9e3; display: block !important; }
     }
     **/
+
 }
 
 #app_acal {
@@ -283,7 +287,7 @@ body { padding: 0; margin: 0; font-family: "Open Sans",Helvetica,Arial,Verdana,s
         max-height: 1000px !important;
     }
 
-    @media @desktop { max-height: 1000px; margin: 0; overflow: visible; }
+    @media @desktop { max-height: 1000px; margin: 20px 0 0 0; overflow: visible; }
 
     ul { margin: 10px 0; padding: 0; list-style: none; border-radius: 3px; /*background: #fff;*/
 
